ParkingSpotFinder impl